--- a/languages/live-search-fa_IR.po
+++ b/languages/live-search-fa_IR.po
@@ -4,37 +4,38 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Live Search 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/live-search\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2025-02-05T19:23:35+00:00\n"
+"PO-Revision-Date: 2025-02-05 22:54+0330\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: fa_IR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2025-02-05T19:23:35+00:00\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"X-Generator: WP-CLI 2.11.0\n"
+"X-Generator: Poedit 3.4.4\n"
 "X-Domain: live-search\n"
 
 #. Plugin Name of the plugin
 #: live-search.php
 msgid "Live Search"
-msgstr ""
+msgstr "جستجو زنده"
 
 #. Plugin URI of the plugin
 #. Author URI of the plugin
 #: live-search.php
 msgid "http://anbarestany.ir"
-msgstr ""
+msgstr "http://anbarestany.ir"
 
 #. Description of the plugin
 #: live-search.php
 msgid "A plugin to add live search functionality to your WordPress site."
-msgstr ""
+msgstr "افزودن امکان جستجو زنده به وردپرس."
 
 #. Author of the plugin
 #: live-search.php
 msgid "Mohammad Anbarestany"
-msgstr ""
+msgstr "محمد عنبرستانی"
 
 #: live-search.php:49
 msgid "No results found"
-msgstr ""
+msgstr "نتیجه‌ای یافت نشد"
