--- a/languages/live-search-fa_IR.po
+++ b/languages/live-search-fa_IR.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Live Search 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/live-search\n"
-"POT-Creation-Date: 2025-02-05T19:23:35+00:00\n"
-"PO-Revision-Date: 2025-02-05 22:54+0330\n"
+"POT-Creation-Date: 2025-02-05T19:45:06+00:00\n"
+"PO-Revision-Date: 2025-02-05 23:23+0330\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fa_IR\n"
@@ -29,7 +29,7 @@ msgstr "http://anbarestany.ir"
 #. Description of the plugin
 #: live-search.php
 msgid "A plugin to add live search functionality to your WordPress site."
-msgstr "افزودن امکان جستجو زنده به وردپرس."
+msgstr "افزودن امکان جستجو زنده به وردپرس"
 
 #. Author of the plugin
 #: live-search.php
@@ -37,5 +37,5 @@ msgid "Mohammad Anbarestany"
 msgstr "محمد عنبرستانی"
 
 #: live-search.php:49
-msgid "No results found"
-msgstr "نتیجه‌ای یافت نشد"
+msgid "no results found..."
+msgstr "نتیجه‌ای یافت نشد..."
