--- a/languages/live-search.pot
+++ b/languages/live-search.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2025-02-05T19:23:35+00:00\n"
+"POT-Creation-Date: 2025-02-05T19:45:06+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.11.0\n"
 "X-Domain: live-search\n"
@@ -36,5 +36,5 @@ msgid "Mohammad Anbarestany"
 msgstr ""
 
 #: live-search.php:49
-msgid "No results found"
+msgid "no results found..."
 msgstr ""
